<resources>
    <string name="app_name">Сlick Clack</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_chats">Chats</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_main_screen_search_text">Search your friend</string>
    <string name="avatar_of_user_content_desc">Avatar of user</string>
    <string name="surname">Surname</string>
    <string name="enter_one_time_password_below">Enter one time password below</string>
    <string name="plus">+</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="title_activity_inherit_chat">InheritChat</string>
    <string name="search">Search</string>
    <string name="remove_history">Remove History</string>
    <string name="hi_man_how_are_you_stub">hi man, how are you?</string>
    <string name="tine_stub">11:40</string>
    <string name="name_stub">Jhon Newman</string>
    <string name="sign_out">Sign out</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="submit">Submit</string>
</resources>
