<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".ui.users_page.UsersPageFragment">

    <ImageView
        android:id="@+id/users_page__avatar_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/avatar_of_user_content_desc"
        android:src="@drawable/ic_avatar"
        android:padding="4dp"
        android:background="@color/no_avatar_background_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_photo_horizontal"
        app:layout_constraintEnd_toEndOf="@id/guideline_photo_vertical"
        app:layout_constraintStart_toStartOf="parent"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_photo_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_photo_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <TextView
        android:id="@+id/users_page__name_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_photo_vertical"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/users_page__surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/surname"
        app:layout_constraintTop_toBottomOf="@+id/users_page__name_textView"
        app:layout_constraintStart_toEndOf="@id/guideline_photo_vertical"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/users_page__sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>