<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="77dp"
    android:gravity="center">

    <TextView
        android:id="@+id/chat__profile_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_profile_image"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/chat__user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/name_stub"
                android:textColor="@color/black"
                android:textSize="@dimen/name_size" />

            <TextView
                android:id="@+id/chat__time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="22dp"
                android:layout_marginTop="2dp"
                android:text="@string/tine_stub" />
        </LinearLayout>

        <TextView
            android:id="@+id/chat__message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="2"
            android:maxLines="2"
            android:text="@string/hi_man_how_are_you_stub" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="start"
            android:background="@color/dark_gray" />
    </LinearLayout>
</LinearLayout>